--- a/src/components/header/index.css
+++ b/src/components/header/index.css
@@ -1,6 +1,7 @@
 .header-layout-background {
     margin-bottom: 16px;
     height: 60px;
+    max-height: 60px;
     display: flex;
     justify-content: center;
     align-items: flex-end;
