--- a/src/components/header/index.css
+++ b/src/components/header/index.css
@@ -12,6 +12,7 @@
     color: #fff;
     margin-right: 20px;
     cursor: pointer;
+    line-height: 40px;
 }
 
 .out-list {
@@ -26,4 +27,15 @@
     top: 60px;
     font-size: 18px;
     cursor: pointer;
+}
+
+.avatar-uploader {
+    width: 40px;
+}
+
+.ant-upload.ant-upload-select-picture-card {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    margin-bottom: 0px
 }
